@@ -1,4 +1,9 @@
+2010-09-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.texi (Article Display): Document gnus-html-show-images.
+
 2010-09-02  Jan Djärv  <jan.h.d@swipnet.se>
+
 	* cl.texi (Basic Setf): Remove x-get-cut-buffer and x-get-cutbuffer.
 
 2010-09-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>
